@@ -15,13 +15,15 @@ For a complete change history, please see the Subversion log comments.
 Version 5.6.4 (????-??-??):
 ---------------------------
  
+- Add the ogc namspace to filters generated by Mapserver (#3414)
+
 - Fix MS_NONSQUARE to work in mode=map (#3413)
 
 - Improve error message when loadQuery() filename extension check fails (#3302)
 
 - Fix GetLegendGraphic using keyimages (#3398)
 
-- Fix getFeatureInfo quries on WFS layers (#3403)
+- Fix getFeatureInfo queries on WFS layers (#3403)
 
 - Fixed mapstring.c build problem related to errno (#3401).
 
